# document-processing

./: .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose-localstack.yml  docker-compose.yml  pyproject.toml
scripts/: setup-localstack.sh  start-localstack.sh
src/: demo.py
tests/: test_jam.py
