[project]
name = "processing"
version = "0.1.0"
description = ""
authors = [
    {name = "David McKee",email = "david.mckee@dxw.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest (>=8.4.2,<9.0.0)",
    "moto[lambda,s3] (>=5.1.12,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
